--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -13,6 +13,14 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<url-pattern>/iemilagros</url-pattern>
 	</servlet-mapping>
 	<servlet>
+		<servlet-name>SubirNotasServlet</servlet-name>
+		<servlet-class>pw2.SubirNotasServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SubirNotasServlet</servlet-name>
+		<url-pattern>/subirnotas</url-pattern>
+	</servlet-mapping>
+	<servlet>
 		<servlet-name>SalirServlet</servlet-name>
 		<servlet-class>pw2.SalirServlet</servlet-class>
 	</servlet>
@@ -83,6 +91,34 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>RegistrarEditarServlet</servlet-name>
 		<url-pattern>/registrareditar</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>AlumnoServlet</servlet-name>
+		<servlet-class>pw2.AlumnoServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AlumnoServlet</servlet-name>
+		<url-pattern>/alumno</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>CursoServlet</servlet-name>
+		<servlet-class>pw2.CursoServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CursoServlet</servlet-name>
+		<url-pattern>/curso</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>CerrarSesion</servlet-name>
+		<servlet-class>pw2.CerrarSesionServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CerrarSesion</servlet-name>
+		<url-pattern>/cerrarsesion</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>principal.html</welcome-file>
 	</welcome-file-list>
